# flask_jwt

internet_shop-4_backend/: main.py  pyproject.toml
internet_shop-4_backend/migrations/versions/: 3ab601ac653c_del_tokens.py  636dcb7b1cc8_init.py  795880880374_change_pass.py  bbbc7df9b1cd_change_name.py  cf6f73360906_add_shop_list.py  dac8db79b50c_add_pass_1_2.py
internet_shop-4_backend/src/data/: parse_data.py
internet_shop-4_backend/src/database/: db_actions.py  models.py
interten_shop-4_frontend/: main.py  pyproject.toml
interten_shop-4_frontend/src/data/: data_actions.py
interten_shop-4_frontend/src/templates/: _base.html  _navigation.html  account.html  index.html  login.html  product.html  signup.html
